feat: add header tablet/desktop nav

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <header class="ms-bg-darkblue text-white">
         <div class="container">
             <div class="py-3 d-flex justify-content-between align-items-center">
-                <h2 class="ms-h2 fs-6 fw-bold">START BOOTSTRAP</h2>
-                <div>menu hamburger</div>
+                <h2 class="ms-h2 fs-5 fw-bold">START BOOTSTRAP</h2>
+                <nav class="d-flex fw-semibold">
+                    <li class="px-2 d-none d-sm-none d-md-block">PORTFOLIO</li>
+                    <li class="px-2 d-none d-xs-none d-md-block">ABOUT</li>
+                    <li class="px-2 d-none d-xs-none d-md-block">CONTACT</li>
+                </nav>
+                <div class="d-sm-block d-md-none">menu hamburger</div>
             </div>
         </div>
     </header>
