feat: add hero section

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </div>
     </header>
     <main>
-        <section>
-            <div class="container text-center">
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda maxime amet beatae totam quo illo esse laudantium atque delectus. Accusantium atque dignissimos commodi laudantium libero, ratione dicta illum sint temporibus.</div>
-                <h1>START BOOTSTRAP</h1>
-                <div class="star"><i class="fa-solid fa-star"></i></div>
-
+        <section class="ms-bg-lightgreen py-3 text-white">
+            <div class="container text-center px-5">
+                <div class="py-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda maxime amet beatae totam quo illo esse laudantium atque delectus. Accusantium atque dignissimos commodi laudantium libero, ratione dicta illum sint temporibus.</div>
+                <h1 class="py-1 fw-bold">START BOOTSTRAP</h1>
+                <div class="star py-1"><i class="fa-solid fa-star"></i></div>
+                <p class="py-1 fw-semibold">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
             </div>
         </section>
     </main>
