feat: add portfolio section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
     </header>
     <main>
+        <!-- Hero Section -->
         <section class="ms-bg-lightgreen py-3 text-white">
             <div class="container text-center px-5">
                 <div class="py-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda maxime amet beatae totam quo illo esse laudantium atque delectus. Accusantium atque dignissimos commodi laudantium libero, ratione dicta illum sint temporibus.</div>
@@ -35,6 +36,22 @@
                 <p class="py-1 fw-semibold">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
             </div>
         </section>
+        <!-- /Hero Section -->
+
+        <!-- Portfolio Section -->
+        <section class="text-center py-5">
+            <h2>PORTFOLIO</h2>
+            <div class="star py-1"><i class="fa-solid fa-star"></i></div>
+            <div class="row px-2 gy-3">
+                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+            </div>
+        </section>
+        <!-- /Portfolio Section -->
     </main>
     
     <!-- Bootstrap JS -->
