feat: add about us section+container sections

--- a/index.html
+++ b/index.html
@@ -40,28 +40,32 @@
 
         <!-- Portfolio Section -->
         <section class="text-center py-5">
-            <h2 class="fw-semibold">PORTFOLIO</h2>
-            <div class="star py-1"><i class="fa-solid fa-star"></i></div>
-            <div class="row px-2 gy-3">
-                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
-                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
-                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
-                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
-                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
-                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+            <div class="container">
+                <h2 class="fw-semibold">PORTFOLIO</h2>
+                <div class="star py-1"><i class="fa-solid fa-star"></i></div>
+                <div class="row px-2 gy-3">
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                </div>
             </div>
         </section>
         <!-- /Portfolio Section -->
 
         <!-- About Us Section -->
         <section class="py-5 text-center text-white ms-bg-lightgreen">
-            <h2 class="fw-semibold">ABOUT</h2>
-            <div class="star py-2"><i class="fa-solid fa-star"></i></div>
-            <div class="row px-5 gy-3">
-                <div class="col-12 px-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
-                <div class="col-12 px-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
+            <div class="container px-5">
+                <h2 class="fw-semibold">ABOUT</h2>
+                <div class="star py-2"><i class="fa-solid fa-star"></i></div>
+                <div class="row px-5 gy-3 text-start">
+                    <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
+                    <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
+                </div>
+                <button class="mt-5 text-white fw-semibold btn border-white"><i class="fa-solid fa-download"></i> Download</button>
             </div>
-            <button class="mt-5 text-white fw-semibold btn border-white"><i class="fa-solid fa-download"></i> Download</button>
         </section>
         <!-- /About Us Section -->
     </main>
