--- a/index.html
+++ b/index.html
@@ -68,6 +68,23 @@
             </div>
         </section>
         <!-- /About Us Section -->
+        <section class="py-5 text-center">
+            <div class="container px-5">
+                <h2 class="fw-semibold">CONTACT ME</h2>
+                <div class="star py-2"><i class="fa-solid fa-star"></i></div>
+                <div class="row px-5 text-start">
+                    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam reiciendis maiores aspernatur, quibusdam odit doloremque quas mollitia, quisquam, quia quo quae libero dolore itaque. Maxime, quidem in! Explicabo, quasi commodi.</div>
+                    <hr class="mt-5">
+                </div>
+                <div class="px-5">
+                    <button class="d-flex justify-content-start ms-bg-lightgreen mt-1 text-white fw-semibold btn border-white">Send</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Me Section -->
+
+        <!-- /Contact Me Section -->
     </main>
     
     <!-- Bootstrap JS -->
