feat: add info section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
             </div>
         </section>
         <!-- /About Us Section -->
+
+        <!-- Contact Me Section -->
         <section class="py-5 text-center">
             <div class="container px-5">
                 <h2 class="fw-semibold">CONTACT ME</h2>
@@ -81,10 +83,34 @@
                 </div>
             </div>
         </section>
-
-        <!-- Contact Me Section -->
-
         <!-- /Contact Me Section -->
+
+        <!-- Info -->
+        <section class="py-5 ms-bg-lightblue text-white">
+            <div class="container px-5">
+                <div class="row text-center fw-semibold">
+                    <div>
+                        <h5 class="fw-semibold">LOCATION</h5>
+                        <p>2215 John Daniel Drive Clark, MO 54243</p>
+                    </div>
+                    <div class="mt-5">
+                        <h6 class="fw-semibold">AROUND THE WEB</h6>
+                        <ul class="d-flex justify-content-center">
+                            <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-google-plus-g"></i></a></li>
+                            <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-linkedin-in"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="mt-5">
+                        <h6 class="fw-semibold">ABOUTN FREELANCER</h6>
+                        <p>Freelance is a free to use, open souirce Bootstrap theme created dy <a href="#">Start Bootstrap</a>.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /Info -->
+
     </main>
     
     <!-- Bootstrap JS -->
