--- a/index.html
+++ b/index.html
@@ -110,8 +110,14 @@
             </div>
         </section>
         <!-- /Info -->
-
     </main>
+    <footer class="ms-bg-darkblue pt-4 pb-5">
+        <div class="container text-center text-white">
+            <div class="row">
+                <div>Copyright <i class="fa-solid fa-copyright"></i> Your Website 2019</div>
+            </div>
+        </div>
+    </footer>
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
