--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 
         <!-- Info -->
         <section class="py-5 ms-bg-lightblue text-white">
-            <div class="container px-5">
-                <div class="row text-center fw-semibold">
-                    <div>
+            <div class="container px-4">
+                <div class="row text-center fw-semibold align-items-center">
+                    <div class="mb-4 col-12 col-md-4">
                         <h5 class="fw-semibold">LOCATION</h5>
                         <p>2215 John Daniel Drive Clark, MO 54243</p>
                     </div>
-                    <div class="mt-5">
+                    <div class="mb-4 col-12 col-md-4">
                         <h6 class="fw-semibold">AROUND THE WEB</h6>
                         <ul class="d-flex justify-content-center">
                             <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-facebook-f"></i></a></li>
@@ -102,7 +102,7 @@
                             <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
-                    <div class="mt-5">
+                    <div class="mb-4 col-12 col-md-4">
                         <h6 class="fw-semibold">ABOUTN FREELANCER</h6>
                         <p>Freelance is a free to use, open souirce Bootstrap theme created dy <a href="#">Start Bootstrap</a>.</p>
                     </div>
