feat: add star style

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
             <div class="container text-center px-5">
                 <div class="py-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda maxime amet beatae totam quo illo esse laudantium atque delectus. Accusantium atque dignissimos commodi laudantium libero, ratione dicta illum sint temporibus.</div>
                 <h1 class="py-1 fw-bold">START BOOTSTRAP</h1>
-                <div class="star py-1"><i class="fa-solid fa-star"></i></div>
-                <p class="py-1 fw-semibold">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+                <div class="py-2">
+                    <i class="star fa-solid fa-star">
+                        <div class="star-left"></div>
+                        <div class="star-right"></div>
+                    </i>
+                </div>                <p class="py-1 fw-semibold">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
             </div>
         </section>
         <!-- /Hero Section -->
@@ -42,8 +46,12 @@
         <section class="text-center py-5">
             <div class="container">
                 <h2 class="fw-semibold">PORTFOLIO</h2>
-                <div class="star py-1"><i class="fa-solid fa-star"></i></div>
-                <div class="row px-2 gy-3">
+                <div class="py-2">
+                    <i class="star fa-solid fa-star">
+                        <div class="star-left"></div>
+                        <div class="star-right"></div>
+                    </i>
+                </div>                <div class="row px-2 gy-3">
                     <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
                     <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
                     <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
@@ -59,8 +67,12 @@
         <section class="py-5 text-center text-white ms-bg-lightgreen">
             <div class="container px-5">
                 <h2 class="fw-semibold">ABOUT</h2>
-                <div class="star py-2"><i class="fa-solid fa-star"></i></div>
-                <div class="row px-5 gy-3 text-start">
+                <div class="py-2">
+                    <i class="star fa-solid fa-star">
+                        <div class="star-left"></div>
+                        <div class="star-right"></div>
+                    </i>
+                </div>                <div class="row px-5 gy-3 text-start">
                     <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
                     <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
                 </div>
@@ -73,7 +85,12 @@
         <section class="py-5 text-center">
             <div class="container px-5">
                 <h2 class="fw-semibold">CONTACT ME</h2>
-                <div class="star py-2"><i class="fa-solid fa-star"></i></div>
+                <div class="py-2">
+                    <i class="star fa-solid fa-star">
+                        <div class="star-left"></div>
+                        <div class="star-right"></div>
+                    </i>
+                </div>
                 <div class="row px-5 text-start">
                     <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam reiciendis maiores aspernatur, quibusdam odit doloremque quas mollitia, quisquam, quia quo quae libero dolore itaque. Maxime, quidem in! Explicabo, quasi commodi.</div>
                     <hr class="mt-5">
