--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
     <main>
         <!-- Hero Section -->
         <section class="ms-bg-lightgreen py-3 text-white">
-            <div class="container text-center px-5">
-                <div class="py-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda maxime amet beatae totam quo illo esse laudantium atque delectus. Accusantium atque dignissimos commodi laudantium libero, ratione dicta illum sint temporibus.</div>
+            <div class="hero container text-center px-5">
+                <img src="./img/avatar.svg" alt="Avatar">
                 <h1 class="py-1 fw-bold">START BOOTSTRAP</h1>
                 <div class="py-2">
                     <i class="star fa-solid fa-star">
                         <div class="star-left"></div>
                         <div class="star-right"></div>
                     </i>
-                </div>                <p class="py-1 fw-semibold">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+                </div>                
+                <p class="py-1 fw-semibold">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
             </div>
         </section>
         <!-- /Hero Section -->
@@ -46,18 +47,31 @@
         <section class="text-center py-5">
             <div class="container">
                 <h2 class="fw-semibold">PORTFOLIO</h2>
-                <div class="py-2">
+                <div class="py-3">
                     <i class="star fa-solid fa-star">
                         <div class="star-left"></div>
                         <div class="star-right"></div>
                     </i>
-                </div>                <div class="row px-2 gy-3">
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, in. Natus expedita asperiores dolores! Sequi cupiditate eligendi ad consectetur, suscipit ipsam quibusdam. Pariatur qui, ipsam necessitatibus quisquam magni eos deserunt!</div>
+                </div>                
+                <div class="row px-2 gy-3">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-3" src="./img/cabin.png" alt="Cabin">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-3" src="./img/cake.png" alt="Cake">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-3" src="./img/circus.png" alt="Circus">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-3" src="./img/game.png" alt="Game">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-3" src="./img/safe.png" alt="Safe">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="rounded-3" src="./img/submarine.png" alt="Submarine">
+                    </div>
                 </div>
             </div>
         </section>
@@ -72,7 +86,8 @@
                         <div class="star-left"></div>
                         <div class="star-right"></div>
                     </i>
-                </div>                <div class="row px-5 gy-3 text-start">
+                </div>                
+                <div class="row px-5 gy-3 text-start">
                     <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
                     <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
                 </div>
