fix:add star before/after css rules white

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <h1 class="py-1 fw-bold">START BOOTSTRAP</h1>
                 <div class="py-2">
                     <i class="star fa-solid fa-star">
-                        <div class="star-left"></div>
-                        <div class="star-right"></div>
+                        <div class="star-left-white"></div>
+                        <div class="star-right-white"></div>
                     </i>
                 </div>                
                 <p class="py-1 fw-semibold">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
@@ -83,8 +83,8 @@
                 <h2 class="fw-semibold">ABOUT</h2>
                 <div class="py-2">
                     <i class="star fa-solid fa-star">
-                        <div class="star-left"></div>
-                        <div class="star-right"></div>
+                        <div class="star-left-white"></div>
+                        <div class="star-right-white"></div>
                     </i>
                 </div>                
                 <div class="row px-5 gy-3 text-start">
