fix: add type button to button elements

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
                     <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
                 </div>
-                <button class="mt-5 text-white fw-semibold btn border-white"><i class="fa-solid fa-download"></i> Download</button>
+                <button type="button" class="mt-5 text-white fw-semibold btn border-white"><i class="fa-solid fa-download"></i> Download</button>
             </div>
         </section>
         <!-- /About Us Section -->
@@ -111,7 +111,7 @@
                     <hr class="mt-5">
                 </div>
                 <div class="px-5">
-                    <button class="d-flex justify-content-start ms-bg-lightgreen mt-1 text-white fw-semibold btn border-white">Send</button>
+                    <button type="button" class="d-flex justify-content-start ms-bg-lightgreen mt-1 text-white fw-semibold btn border-white">Send</button>
                 </div>
             </div>
         </section>
