--- a/index.html
+++ b/index.html
@@ -13,19 +13,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="ms-bg-darkblue text-white">
-        <div class="container">
-            <div class="py-3 d-flex justify-content-between align-items-center">
-                <h2 class="ms-h2 fs-5 fw-bold">START BOOTSTRAP</h2>
-                <nav class="d-flex fw-semibold">
-                    <li class="px-2 d-none d-sm-none d-md-block">PORTFOLIO</li>
-                    <li class="px-2 d-none d-xs-none d-md-block">ABOUT</li>
-                    <li class="px-2 d-none d-xs-none d-md-block">CONTACT</li>
-                </nav>
-                <div class="d-sm-block d-md-none">menu hamburger</div>
+    <header class="ms-bg-darkblue sticky-top">
+        <nav class="navbar navbar-expand-sm" data-bs-theme="dark">
+            <div class="container">
+                <h2><a class="ms-h2 fs-5 fw-bold navbar-brand" href="#">START BOOTSTRAP</a></h2>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="fw-semibold navbar-nav ms-auto mb-2 mb-sm-0">
+                        <li class="nav-item">
+                            <a class="ms-nav-link nav-link" href="#">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="ms-nav-link nav-link" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="ms-nav-link nav-link" href="#">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </nav>
     </header>
+    
     <main>
         <!-- Hero Section -->
         <section class="ms-bg-lightgreen py-3 text-white">
@@ -53,7 +64,7 @@
                         <div class="star-right"></div>
                     </i>
                 </div>                
-                <div class="row px-2 gy-3">
+                <div class="row g-3">
                     <div class="col-12 col-md-6 col-lg-4">
                         <img class="rounded-3" src="./img/cabin.png" alt="Cabin">
                     </div>
