--- a/index.html
+++ b/index.html
@@ -66,22 +66,52 @@
                 </div>                
                 <div class="row g-3">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-3" src="./img/cabin.png" alt="Cabin">
+                        <div class="anchor rounded-3">
+                            <img class="rounded-3" src="./img/cabin.png" alt="Cabin">
+                            <div class="plus-hover">
+                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-3" src="./img/cake.png" alt="Cake">
+                        <div class="anchor rounded-3">
+                            <img class="rounded-3" src="./img/cake.png" alt="Cabin">
+                            <div class="plus-hover">
+                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                            </div>
+                        </div>                        
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-3" src="./img/circus.png" alt="Circus">
+                        <div class="anchor rounded-3">
+                            <img class="rounded-3" src="./img/circus.png" alt="Cabin">
+                            <div class="plus-hover">
+                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                            </div>
+                        </div>                        
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-3" src="./img/game.png" alt="Game">
+                        <div class="anchor rounded-3">
+                            <img class="rounded-3" src="./img/game.png" alt="Cabin">
+                            <div class="plus-hover">
+                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                            </div>
+                        </div>                        
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-3" src="./img/safe.png" alt="Safe">
+                        <div class="anchor rounded-3">
+                            <img class="rounded-3" src="./img/safe.png" alt="Cabin">
+                            <div class="plus-hover">
+                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                            </div>
+                        </div>                        
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img class="rounded-3" src="./img/submarine.png" alt="Submarine">
+                        <div class="anchor rounded-3">
+                            <img class="rounded-3" src="./img/submarine.png" alt="Cabin">
+                            <div class="plus-hover">
+                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                            </div>
+                        </div>                        
                     </div>
                 </div>
             </div>
