feat: add link to portfolio img

--- a/index.html
+++ b/index.html
@@ -67,50 +67,62 @@
                 <div class="row g-3">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="anchor rounded-3">
-                            <img class="rounded-3" src="./img/cabin.png" alt="Cabin">
-                            <div class="plus-hover">
-                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
-                            </div>
+                            <a href="#">
+                                <img class="rounded-3" src="./img/cabin.png" alt="Cabin">
+                                <div class="plus-hover">
+                                    <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="anchor rounded-3">
-                            <img class="rounded-3" src="./img/cake.png" alt="Cabin">
-                            <div class="plus-hover">
-                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
-                            </div>
+                            <a href="#">
+                                <img class="rounded-3" src="./img/cake.png" alt="Cabin">
+                                <div class="plus-hover">
+                                    <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                                </div>
+                            </a>
                         </div>                        
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="anchor rounded-3">
-                            <img class="rounded-3" src="./img/circus.png" alt="Cabin">
-                            <div class="plus-hover">
-                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
-                            </div>
+                            <a href="#">
+                                <img class="rounded-3" src="./img/circus.png" alt="Cabin">
+                                <div class="plus-hover">
+                                    <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                                </div>
+                            </a>
                         </div>                        
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="anchor rounded-3">
-                            <img class="rounded-3" src="./img/game.png" alt="Cabin">
-                            <div class="plus-hover">
-                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
-                            </div>
+                            <a href="#">
+                                <img class="rounded-3" src="./img/game.png" alt="Cabin">
+                                <div class="plus-hover">
+                                    <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                                </div>
+                            </a>
                         </div>                        
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="anchor rounded-3">
-                            <img class="rounded-3" src="./img/safe.png" alt="Cabin">
-                            <div class="plus-hover">
-                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
-                            </div>
+                            <a href="#">
+                                <img class="rounded-3" src="./img/safe.png" alt="Cabin">
+                                <div class="plus-hover">
+                                    <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                                </div>
+                            </a>
                         </div>                        
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="anchor rounded-3">
-                            <img class="rounded-3" src="./img/submarine.png" alt="Cabin">
-                            <div class="plus-hover">
-                                <i class="fa-solid fa-plus d-flex justify-content-center"></i>
-                            </div>
+                            <a href="#">
+                                <img class="rounded-3" src="./img/submarine.png" alt="Cabin">
+                                <div class="plus-hover">
+                                    <i class="fa-solid fa-plus d-flex justify-content-center"></i>
+                                </div>
+                            </a>
                         </div>                        
                     </div>
                 </div>
