feat: add hover btn effect

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
                     <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
                 </div>
-                <button type="button" class="mt-5 text-white fw-semibold btn border-white"><i class="fa-solid fa-download"></i> Download</button>
+                <button type="button" class="ms-white-btn mt-5 fw-semibold btn border-white"><a id="txt-black" href="#"><i class="fa-solid fa-download"></i> Download</a></button>
             </div>
         </section>
         <!-- /About Us Section -->
@@ -183,7 +183,7 @@
         <!-- /Contact Me Section -->
 
         <!-- Info -->
-        <section class="py-5 ms-bg-lightblue text-white">
+        <section class="py-5 ms-bg-lightblue text-white info">
             <div class="container px-4">
                 <div class="row text-center fw-semibold align-items-center">
                     <div class="mb-4 col-12 col-md-4">
