--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
         <!-- /Portfolio Section -->
 
         <!-- About Us Section -->
-        <section class="py-5 text-center text-white ms-bg-lightgreen">
-            <div class="container ms-container gx-0">
+        <section class="p-5 text-center text-white ms-bg-lightgreen">
+            <div class="container px-5 ms-container gx-0">
                 <h2 class="fw-semibold">ABOUT</h2>
                 <div class="py-2">
                     <i class="star fa-solid fa-star">
@@ -141,8 +141,8 @@
                     </i>
                 </div>                
                 <div class="row gy-3 text-start">
-                    <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
-                    <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, atque! Odit laudantium tenetur amet nesciunt repellat cumque magnam quia fugiat unde voluptate. Tenetur ipsa iste laborum laudantium! Saepe, quibusdam tempore?</div>
+                    <div class="col-12 col-md-6">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</div>
+                    <div class="col-12 col-md-6">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
                 </div>
                 <button type="button" class="ms-white-btn mt-5 fw-semibold btn border-white"><a id="txt-black" href="#"><i class="fa-solid fa-download"></i> Download</a></button>
             </div>
@@ -150,8 +150,8 @@
         <!-- /About Us Section -->
 
         <!-- Contact Me Section -->
-        <section class="py-5">
-            <div class="container ms-container gx-0"> 
+        <section class="p-5">
+            <div class="container px-5 ms-container gx-0"> 
                 <h2 class="fw-semibold text-center">CONTACT ME</h2>
                 <div class="py-2 text-center">
                      <i class="star fa-solid fa-star">
@@ -183,7 +183,7 @@
         <!-- /Contact Me Section -->
 
         <!-- Info -->
-        <section class="py-5 ms-bg-lightblue text-white info">
+        <section class="py-5 ms-bg-lightblue text-white">
             <div class="container px-4">
                 <div class="row text-center fw-semibold align-items-center">
                     <div class="mb-4 col-12 col-md-4">
@@ -192,7 +192,7 @@
                     </div>
                     <div class="mb-4 col-12 col-md-4">
                         <h6 class="fw-semibold">AROUND THE WEB</h6>
-                        <ul class="d-flex justify-content-center">
+                        <ul class="d-flex justify-content-center info">
                             <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-facebook-f"></i></a></li>
                             <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-google-plus-g"></i></a></li>
                             <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-twitter"></i></a></li>
