--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="fw-semibold navbar-nav ms-auto mb-2 mb-sm-0">
                         <li class="nav-item">
-                            <a class="ms-nav-link nav-link" href="#">PORTFOLIO</a>
+                            <a class="ms-nav-link nav-link" href="#portfolio" data-bs-dismiss="collapse">PORTFOLIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="ms-nav-link nav-link" href="#">ABOUT</a>
+                            <a class="ms-nav-link nav-link" href="#about" data-bs-dismiss="collapse">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="ms-nav-link nav-link" href="#">CONTACT</a>
+                            <a class="ms-nav-link nav-link" href="#contact" data-bs-dismiss="collapse">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -55,7 +55,7 @@
         <!-- /Hero Section -->
 
         <!-- Portfolio Section -->
-        <section class="text-center py-5">
+        <section id="portfolio" class="text-center py-5">
             <div class="container">
                 <h2 class="fw-semibold">PORTFOLIO</h2>
                 <div class="py-3">
@@ -131,7 +131,7 @@
         <!-- /Portfolio Section -->
 
         <!-- About Us Section -->
-        <section class="p-5 text-center text-white ms-bg-lightgreen">
+        <section id="about" class="p-5 text-center text-white ms-bg-lightgreen">
             <div class="container px-5 ms-container gx-0">
                 <h2 class="fw-semibold">ABOUT</h2>
                 <div class="py-2">
@@ -150,7 +150,7 @@
         <!-- /About Us Section -->
 
         <!-- Contact Me Section -->
-        <section class="p-5">
+        <section id="contact" class="p-5">
             <div class="container px-5 ms-container gx-0"> 
                 <h2 class="fw-semibold text-center">CONTACT ME</h2>
                 <div class="py-2 text-center">
@@ -219,5 +219,16 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- /Bootstrap JS -->
+    <!-- JS Scroll+Close menù -->
+    <script>
+        var navLinks = document.querySelectorAll('.nav-link');
+        navLinks.forEach(function (link) {
+            link.addEventListener('click', function () {
+                var collapse = new bootstrap.Collapse(document.getElementById('navbarSupportedContent'));
+                collapse.toggle();
+            });
+        });
+    </script>
+    <!-- JS /Scroll+Close menù -->
 </body>
 </html>
