--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <!-- About Us Section -->
         <section id="about" class="p-5 text-center text-white ms-bg-lightgreen">
-            <div class="container px-5 ms-container gx-0">
+            <div class="container px-5 gx-0">
                 <h2 class="fw-semibold">ABOUT</h2>
                 <div class="py-2">
                     <i class="star fa-solid fa-star">
@@ -141,8 +141,8 @@
                     </i>
                 </div>                
                 <div class="row gy-3 text-start">
-                    <div class="col-12 col-md-6">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</div>
-                    <div class="col-12 col-md-6">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
+                    <div class="col-12 col-md-5 offset-md-1">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</div>
+                    <div class="col-12 col-md-5">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
                 </div>
                 <button type="button" class="ms-white-btn mt-5 fw-semibold btn border-white"><a id="txt-black" href="#"><i class="fa-solid fa-download"></i> Download</a></button>
             </div>
@@ -151,7 +151,7 @@
 
         <!-- Contact Me Section -->
         <section id="contact" class="p-5">
-            <div class="container px-5 ms-container gx-0"> 
+            <div class="container px-5 gx-0"> 
                 <h2 class="fw-semibold text-center">CONTACT ME</h2>
                 <div class="py-2 text-center">
                      <i class="star fa-solid fa-star">
@@ -159,7 +159,7 @@
                          <div class="star-right"></div>
                      </i>
                 </div>
-                <form class="ms-input">
+                <form class="ms-input col-md-10 offset-md-1">
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="floatingInput-name" placeholder="name@example.com">
                         <label for="floatingInput-name">Name</label>
