--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                     <div class="mb-4 col-12 col-md-4">
                         <h6 class="fw-semibold">AROUND THE WEB</h6>
                         <ul class="d-flex justify-content-center info">
-                            <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-google-plus-g"></i></a></li>
-                            <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="d-flex justify-content-center align-items-center fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a target="_blank" href="https://m.facebook.com/login/?locale=it_IT&refsrc=deprecated"><i class="d-flex justify-content-center align-items-center fa-brands fa-facebook-f"></i></a></li>
+                            <li><a target="_blank" href="https://www.google.it/"><i class="d-flex justify-content-center align-items-center fa-brands fa-google-plus-g"></i></a></li>
+                            <li><a target="_blank" href="https://twitter.com/?logout=1708971698384"><i class="d-flex justify-content-center align-items-center fa-brands fa-twitter"></i></a></li>
+                            <li><a target="_blank" href="https://www.linkedin.com/login/it"><i class="d-flex justify-content-center align-items-center fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
                     <div class="mb-4 col-12 col-md-4">
