feat: add method and actioon to form

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                          <div class="star-right"></div>
                      </i>
                 </div>
-                <form class="ms-input col-md-10 offset-md-1">
+                <form action="" method="post" class="ms-input col-md-10 offset-md-1">
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="floatingInput-name" placeholder="name@example.com">
                         <label for="floatingInput-name">Name</label>
